crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__timestamp_mapping.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | sort @timestamp\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
ORDER BY "@timestamp" ASC
