crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__where_level_eq_band.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(r#\"* | where level == \"error\"\"#)"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE "severity" BETWEEN 17 AND 20
