crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__where_level_gte_number.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(r#\"* | where level >= \"warn\"\"#)"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE "severity" >= 13
