crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__where_level_is_a_plain_comparison.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(r#\"* | where level == \"error\"\"#)"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE ("level" = ?)
---
params:
  0: 'error'
